kustomizations/argocd/base/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argo.local
    secretName: argocd-tls
  rules:
  - host: argo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        # pathType: ImplementationSpecific
        backend:
          service:
            name: argocd-server
            port:
              name: http
              # number: 80
